# macals

./: LICENSE  README.md  _macals.c  pyproject.toml
.github/workflows/: build-and-publish.yml
macals/: __init__.py  __main__.py
